<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.CourseDetails">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="402dp"
        android:layout_height="727dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/course_title" />

                <EditText
                    android:id="@+id/coursetitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/chemistry" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/course_start_date" />

                <EditText
                    android:id="@+id/coursestartdate"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:hint="@string/_03_31_22" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/course_end_date" />

                <EditText
                    android:id="@+id/courseenddate"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:hint="@string/_04_31_22" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/status" />

                <EditText
                    android:id="@+id/coursestatus"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:hint="@string/completed" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Instructor Name" />

                <EditText
                    android:id="@+id/courseinstructorname"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:hint="Name" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Instructor Phone" />

                <EditText
                    android:id="@+id/courseinstructorphone"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:hint="123-456-7890" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Instructor Email" />

                <EditText
                    android:id="@+id/courseinstructoremail"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:hint="Email" />
            </LinearLayout>


            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/savecourse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/save" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Edit Notes" />

                <EditText
                    android:id="@+id/editnotes"
                    android:layout_width="350dp"
                    android:layout_height="200dp"
                    android:hint="@string/note" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="409dp"
                    android:layout_height="wrap_content"
                    tools:layout_editor_absoluteX="1dp"
                    tools:layout_editor_absoluteY="373dp" />

            </androidx.appcompat.widget.LinearLayoutCompat>
        </LinearLayout>

    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/baseline_add_24" />

</androidx.constraintlayout.widget.ConstraintLayout>